Fix scrollbar. Improve navbar display

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,44 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #374151;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #9CA3AF;
+}
+
+/* Up Arrow */
+::-webkit-scrollbar-button:single-button:decrement {
+  background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" fill="gray" viewBox="0 0 24 24"><path d="M12 8l-6 6h12z"/></svg>') no-repeat center;
+  background-size: 15px 15px;
+
+}
+
+/* Down Arrow */
+::-webkit-scrollbar-button:single-button:increment {
+  background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" fill="gray" viewBox="0 0 24 24"><path d="M12 16l6-6H6z"/></svg>') no-repeat center;
+  background-size: 15px 15px;
+}
+
+/* Remove default button styles */
+::-webkit-scrollbar-button {
+  background-color: transparent;
+  border: none;
+}
